# ChangeLog for app-misc/byobu
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-misc/byobu/ChangeLog,v 1.83 2014/03/31 03:04:52 radhermit Exp $

*byobu-5.77 (31 Mar 2014)

  31 Mar 2014; Tim Harder <radhermit@gentoo.org> +byobu-5.77.ebuild:
  Version bump.

  19 Mar 2014; Tim Harder <radhermit@gentoo.org> -byobu-5.69.ebuild,
  -byobu-5.70.ebuild, -byobu-5.71.ebuild, -byobu-5.72.ebuild:
  Remove old.

*byobu-5.76 (19 Mar 2014)

  19 Mar 2014; Tim Harder <radhermit@gentoo.org> +byobu-5.76.ebuild:
  Version bump.

*byobu-5.74 (17 Mar 2014)

  17 Mar 2014; Tim Harder <radhermit@gentoo.org> +byobu-5.74.ebuild:
  Version bump.

*byobu-5.73 (19 Feb 2014)

  19 Feb 2014; Tim Harder <radhermit@gentoo.org> +byobu-5.73.ebuild:
  Version bump.

*byobu-5.72 (13 Feb 2014)

  13 Feb 2014; Tim Harder <radhermit@gentoo.org> +byobu-5.72.ebuild:
  Version bump.

*byobu-5.71 (11 Feb 2014)

  11 Feb 2014; Tim Harder <radhermit@gentoo.org> +byobu-5.71.ebuild:
  Version bump.

  25 Jan 2014; Tim Harder <radhermit@gentoo.org> -byobu-5.60.ebuild,
  -byobu-5.61.ebuild, -byobu-5.64.ebuild, -byobu-5.65.ebuild,
  -byobu-5.66.ebuild, -byobu-5.67.ebuild, -byobu-5.68.ebuild:
  Remove old.

*byobu-5.70 (25 Jan 2014)

  25 Jan 2014; Tim Harder <radhermit@gentoo.org> +byobu-5.70.ebuild:
  Version bump.

*byobu-5.69 (20 Dec 2013)

  20 Dec 2013; Tim Harder <radhermit@gentoo.org> +byobu-5.69.ebuild:
  Version bump.

*byobu-5.68 (17 Dec 2013)

  17 Dec 2013; Tim Harder <radhermit@gentoo.org> +byobu-5.68.ebuild:
  Version bump.

*byobu-5.67 (08 Dec 2013)

  08 Dec 2013; Tim Harder <radhermit@gentoo.org> +byobu-5.67.ebuild:
  Version bump.

*byobu-5.66 (02 Dec 2013)

  02 Dec 2013; Tim Harder <radhermit@gentoo.org> +byobu-5.66.ebuild:
  Version bump.

*byobu-5.65 (23 Nov 2013)

  23 Nov 2013; Tim Harder <radhermit@gentoo.org> +byobu-5.65.ebuild:
  Version bump.

*byobu-5.64 (12 Nov 2013)
