@@ -5,20 +5,18 @@ DIST byobu_5.73.orig.tar.gz 635985 SHA256 c5508b591f4bb1f9cbfb3e9264b3e123eac791
 DIST byobu_5.74.orig.tar.gz 645626 SHA256 7df6c1cbf6645cf929ca046628c6b9a92a9744f22760a13de05a071c4857a029 SHA512 194e76b9a08028d0a50663ac2c34a7bb9e462b8c1c6b72dc79caa53057834ca919b26c477643a4aa07dd350bf71f8860ec45c489ba6030bdfb0999025dba0997 WHIRLPOOL 6b39c1b9cfadfad135b6661a79c8c74dacdf830e8baad44485712f865d9e0e14e8ec88ef6f154ef032f4acd64fc1b7bd9fe1cae3e195558ca27abfd02399ee27
 DIST byobu_5.76.orig.tar.gz 646473 SHA256 cd1b64e2f93b2ef513ece9853b225a7d7764c1b708c423acddfc2763929fa3ac SHA512 31ac686fae2ac9c8570466a639427a9d4b1092ebc89950b551172c79acdd74530a21d2902d927e33cedcf0d399057c51154f66cf1c9c4ba7ddee6ae0edeb9a12 WHIRLPOOL a79c940a3a5e15e881350b0f89d102f470bdc56baaecf14ac9b21d61e0f90f6dbb527387eaed250196977c70ee197d06e5e8e60c0b766822e458e77836228fd1
 DIST byobu_5.77.orig.tar.gz 649172 SHA256 94247a87f93a45b15aeff83f8e4cc3082d78e7313ceebd9d50855f91858ac064 SHA512 dd1093f78b59999f137dca9a45904fb324d8bc2880e678f084481834d9444e09c553ed71ee57a58e664e6bf36ebdabb3ccfcb9d99fe0d330e02c100cafe8d252 WHIRLPOOL e1fc2dd01591e59f19a27d78c920ba7e0f59e8ad5fce0300b1dbb3b779c2805b40c5657cf3601ab833148d00441d9add5438820dcedc58ad78b91f7dc141f4cf
+DIST byobu_5.78.orig.tar.gz 649257 SHA256 fe18120c342fbcb6510f610cb51bcbb31fb2a84688bda2671c6bb4ff27ac370c SHA512 34fef79e0d36990f3d0a5bd9d874c914e9f3997b7c4b86f1764a7e0dc8ce038ad5e650ea2d9cd5557aae9105680f281ef4e45744085c01784e464a7a399f710c WHIRLPOOL fb8352cf911d376b4261819e7e15aa3f23bed2d591831b71a40917a32edc49e05d6b231183289a6d2e54a5a8839726cae0235eb7d4e5bfc3210556e4bee91d52
 EBUILD byobu-5.73.ebuild 1051 SHA256 6e2034c5a67831141a61afee7a4294073184d60503c11b963aaac97b072279dc SHA512 8dae5c019cfaddb0822d4a332f02e1893c83f056c62ee6f3ab0f6b67e9536f75c9231cf0f6d7ceb3c82fda61067c2f02b2c59c437736d7f3c7b14e7b2a836594 WHIRLPOOL eef87c27a72469da855960967e5114a7c11946b09d26eb15440cae16aa2f04953d51e43ded8e126f6f58ac0aa9da22c570100e4a1d7d50fbbb3c146407bc795a
 EBUILD byobu-5.74.ebuild 1051 SHA256 5f505fe40af752a31b6f1d82126216e36605c2b80ea9e345734c20ea9a0fb381 SHA512 e5516a974a1cee985d3f3caa7d210dba5bc33ac206680fbd72aa642936736968113494c9eeafb87a57a120a581e0550ab85c051e8abfa40f942c4a0d6bde9841 WHIRLPOOL de0dbe2efe3d4924f111a9beab107953da37d3f6bd02a078e8101efac4d057c2535f8d762992bb15ce3914945e9772d97340484c4abd6e4fa0780cd2daf47be9
 EBUILD byobu-5.76.ebuild 1051 SHA256 ec9a809b935d5fe10fec28f0660f48c1f15edd59265fcfec74e0a68ce5a3d37b SHA512 50f5e7570792ca5d75c5b903fa029be27b06d71ea2b1a897b3c96e89696a0eaf1f9e2bb8582ef926e844ee10d52da072cd3da704f6546ee6837735e153282bc6 WHIRLPOOL 9b654a91d9e6c1f2aeda02e468cbf4a398b9016e17d45889b5cc526ec0a61a966af8e86b463ed84a9b793bca7551e0c2dfcf56b3c47f7529ee5db2a9705f1f30
 EBUILD byobu-5.77.ebuild 1051 SHA256 12ccdc741ac87c76616aebbbd2a44a423279f67e83c7f5ab6faabcb8b8afcd9a SHA512 44b9832a74de5a76593a08dbe7fe9139c8f2e1ad220b95800d6502a26ab805251ce099d3b8593709c19eb987ea8d39ba1c977892488ba612168e9daf29e11daa WHIRLPOOL e4468b58d0367d6d75c8552d266c20dbd46f30e2bbbc4ac3abf817fc604cdc17a208dbcdd165c5a483a460c6b67fa570213d679c7874f3948e9f6cc16bce6890
-MISC ChangeLog 10735 SHA256 f06f9d2e0bb0829d25d363ccfb21a626e6f743b8a7752e3da62c26e76753d607 SHA512 7b26874f20ee917c0b36846bb57510102716162c796a90519b17d5f8317252c91a7d71adff28323cade1441d8e3483497db1012a2bcd0a28c4bebc90842a9530 WHIRLPOOL 7b7bf8b5e4cf07b2e50c3cae4ea476fc6792853ea4b90c7c707705f63250d0787e80f82d3b37afb5a009da2a17c2e7a1ffb5a951c36f466d721046b9452563ed
+EBUILD byobu-5.78.ebuild 1045 SHA256 6dbdf12eb3983a43a9de7cbff6ed66f214714eec3b0e5d059710e7f54ed0637c SHA512 b757e0d9021792f3ee38dfad6872319a0b0adfa519da4fa7b504e65763169912622e991ceac8dbbc4b2dd6e7e5ab30898e3a33f372ed773a9a202147609d77eb WHIRLPOOL 4e1e0919ab16da8e52e1c738d20ac48b4a9855419e3ed32b4a5031af0635cec64460729d76e1fd3db301b3387fd192bc345d558e45e94e72b89325e7dace9d50
+MISC ChangeLog 10840 SHA256 2961361e79ba7c81039d84f50d63b4ec68e187dc13b5a48e8ea8d008614e02ff SHA512 2ee7e4ecc832cc44a50473e7da8875ffa6e5f42346756d897a427c24459cbdb1cb1f7b35c8a74a6802d4d4797f0319a0e87ae7f4ad11df555685c6cf2cb14bdf WHIRLPOOL db12ae41b3c007b508ec88cc2dea2912d8143fcf22d0a667fa3bd1f4580c69c13406e7ad70670f73ddaf70eb12dcb6dbaf4852d7dc634c47460b416333d73b26
 MISC metadata.xml 814 SHA256 2893a1b1f1baa5368b5fb29b05455cd6be7f3c3a6baeedfcdc88e9591d67473c SHA512 0dc424578d083bb657747b12c200fc0f2f3a42415eee8587cce94adc5e09e9303ff7bc21c66c9e43a597e68b748f2bd23b8e47786f4c3093421cc7d996338db1 WHIRLPOOL 770a8ff6ef82f44b0773f318d897d14011a2a1b6223627d30baa5cf807a27c4381cef86a41372025014e9cea082d4600ab01834d7ccac2ce8940bf2b61182a26
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iQEcBAEBCAAGBQJTONtVAAoJEEqz6FtPBkyje08H/3+AsSB3cO7M6fhbL0LWPfeI
-nE8Hcq9JwPL+RKHGWVYOQ7umsY2dtCgJEh+xEQ84jm6y5hU7vncfE4k9ZpZQ2AQE
-N2nnVqvLTPLOGtANNb9kMdDDzh0MwDJm8cixsYX1Hu4tcHzbgefmtXpnLm62kgFp
-CdAIXDuWYEIW9U9voSvHY/CKLLTaHQ0N1ykGCeeB5dmY+lGNrVqQwDvmUA4NFoh3
-ahH8JjL7dX/pGcVNYakAFnPOI+0j+q/B6SnyxuShZfAMSKuRJ/PH6xRGAC2sD7r+
-ncwfFP3BVVMsE4o+NwFriPPzavgw1OjbVx5iszEkFlzsnXsAk3GRSJ8zHz2VJIQ=
-=lYME
+iEYEAREIAAYFAlNYVtYACgkQVWmRsqeSphMM5ACfV9O1Re50StH9ziWKSMM7uNbd
+aLAAn3rOrwp9V+WFId/i1ALDn5YFs0Cq
+=zcCr
 -----END PGP SIGNATURE-----
